# Budget-Tracker

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/routes/: auth_routes.py  budget_routes.py  expense_routes.py  goals_routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BudgetPulse.css  BudgetPulse.jsx  ExpenseHeatmap.css  ExpenseHeatmap.jsx  ExportModal.css  ExportModal.jsx  Navbar.css  Navbar.jsx  QuickAdd.css  QuickAdd.jsx  StreakBadge.css  StreakBadge.jsx  VelocityMeter.css  VelocityMeter.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Analytics.css  Analytics.jsx  Dashboard.css  Dashboard.jsx  Expenses.css  Expenses.jsx  Goals.css  Goals.jsx  Login.css  Login.jsx
frontend/src/services/: api.js  demoApi.js
